Attempt 4 at fixing modal issue on safari

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,12 @@
 /* Generic custom styles here */
 
 .modal-backdrop {
-    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #000000;
 }
 
 .content {
